Kubernetes/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  labels:
    app: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      name: frontend
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: nicomuros/m6-frontend:v1
          imagePullPolicy: Always
          ports:
            - containerPort: 5173
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
    selector:
        app: frontend
    ports:
      - protocol: TCP
        port: 80
        targetPort: 5173
