Kubernetes/mysql.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db
  labels:
    app: db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      name: db
      labels:
        app: db
    spec:
      containers:
        - name: db
          image: mysql:8.0.33
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3306
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: db-service
spec:
    selector:
        app: db
    ports:
      - protocol: TCP
        port: 3306
        targetPort: 3306
